frontend/test/should_fail/retype_102.grg
using retype_model_002;

// forbidden, because write access to old node's attributes

rule r {
	a:Node;
	b:Node;

	a -x:TYPE1-> b;

	replace {
		a -z:TYPE2<x>-> b;

		eval { x.a = z.a; }
	}
}

